[package]
name = "learning_RUST"
version = "0.1.0"
authors = ["Shrey Kavi <shrey_kavi@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# packages available at https://crates.io/
modules_and_crates = { path = "../c7_modules_crates" }