[package]
name = "learning_RUST"
version = "0.1.0"
authors = ["Shrey Kavi <shrey_kavi@hotmail.com>"]
edition = "2018"
description = "A place for me to practice learning Rust."
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Default profiles but these can be used to override
[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies]
# packages available at https://crates.io/
modules_and_crates = { path = "../c7_modules_crates" }